--- a/hd44780-b.html
+++ b/hd44780-b.html
@@ -15,32 +15,29 @@
 -->
 
 <script type="text/javascript">
-    RED.nodes.registerType('hd44780', {
+    RED.nodes.registerType('hd44780-b', {
         category: 'iiot modules',
-        color: 'Lime',
-        paletteLabel: 'LCD',
+        color: 'LimeGreen',
+        paletteLabel: 'LCD-BIG',
         defaults: {
             name:     { value: "" },
             lcdtype:  { value: "1", required: true },
             devtyp:   { value: "0", required: true },
             devadr:   { value: "7", required: true },
-            nline:    { value: 0, required: true, validate: function (v) { return RED.validators.number(v) && (v >= 0) && (v <= 3); } },
-            ralign:   { value: false },
-            fill:     { value: "0", required: true },
-            bargraph: { value: false },
+            nline:    { value: 0, required: true, validate: function (v) { return RED.validators.number(v) && (v >= 0) && (v <= 2); } },
         },
         inputs: 1,
         outputs: 0,
-        inputLabels: ["string/number/array"],
+        inputLabels: ["string/number"],
         icon: function() { return (this.lcdtype == "0") ? "lcd1602.png" : "lcd2004.png"; },
         labelStyle: function() { return this.name ? "node_label_italic" : ""; },
-        label: function () { return this.name || "LCD #" + this.devadr + ".L" + this.nline + (this.bargraph ? "B" : ""); },
+        label: function () { return this.name || "LCD-BIG #" + this.devadr + ".L" + this.nline; },
     });
 </script>
 
-<script type="text/html" data-template-name="hd44780">
+<script type="text/html" data-template-name="hd44780-b">
     <div class="form-row">
-        <label style="width:100%; border-bottom: 2px solid rgb(0, 0, 0);"><b>LCD-Display (hd44780)</b></label>
+        <label style="width:100%; border-bottom: 2px solid rgb(0, 0, 0);"><b>LCD-Big-Display (hd44780)</b></label>
     </div>
     <div class="form-row">
         <label for="node-input-lcdtype"><b>LCD-Type</b></label>
@@ -71,32 +68,7 @@
     </div>
     <div class="form-row">
         <label for="node-input-nline"><b>Line-Number</b></label>
-        <input id="node-input-nline" input type="number" min="0" max="3" required style="width: auto;">
-    </div>
-    <div class="form-row">
-        <label for="node-input-ralign"><b>Rigth-Align</b></label>
-        <input type="checkbox" id="node-input-ralign" title="Align text on rigth" style="display: inline-block; width: auto; vertical-align: top;">
-    </div>
-    <div class="form-row">
-        <label for="node-input-fill"><b>Fill</b></label>
-        <select type="text" id="node-input-fill" style="width: auto;">
-            <option value="0">Blank</option>
-            <option value="1">Zero 0</option>
-            <option value="2">Minus -</option>
-            <option value="3">Underline _</option>
-            <option value="4">Custom Font 0</option>
-            <option value="5">Custom Font 1</option>
-            <option value="6">Custom Font 2</option>
-            <option value="7">Custom Font 3</option>
-            <option value="8">Custom Font 4</option>
-            <option value="9">Custom Font 5</option>
-            <option value="10">Custom Font 6</option>
-            <option value="11">Custom Font 7</option>
-        </select>
-    </div>
-    <div class="form-row">
-        <label for="node-input-bargraph"><b>Bargraph</b></label>
-        <input type="checkbox" id="node-input-bargraph" title="Displays Bargraph" style="display: inline-block; width: auto; vertical-align: top;">
+        <input id="node-input-nline" input type="number" min="0" max="2" required style="width: auto;">
     </div>
     <div class="form-row">
         <label for="node-input-name"><b>Name</b></label>
@@ -104,27 +76,15 @@
     </div>
 </script>
 
-<script type="text/html" data-help-name="hd44780">
-    <p>LCD-Display (hd44780)</p>
+<script type="text/html" data-help-name="hd44780-b">
+    <p>LCD-Display with big font (hd44780)</p>
     <h3><b>Input:</b></h3>
     <dl class="message-properties">
         <dt>payload <span class="property-type">number/string</span></dt>
         <dd>Contains the text to display on lcd.</dd>
-        <dd>Input is converted to string.</dd>
-        <dd>Whole line is filled with fill character</dd>
-        <dd>and printed with input string.</dd>
         <dt>column (optional)<span class="property-type">number</span></dt>
         <dd>Set column to write number or string.</dd>
-        <dd>Align and fill are disabled.</dd>
-        <dt>font (optional)<span class="property-type">number array</span></dt>
-        <dd>Sends custom font to hd44780 as array.</dd>
-        <dd>Each array element defines line pattern.</dd>
-        <dd>Eight array elements defines the font.</dd>
-        <dd>Max. 8 custom fonts are possible.</dd>
-        <dd>To define a Heart character send:</dd>
-        <dd><b>[0x00,0x00,0x0A,0x15,0x11,0x0E,0x04,0x00]</b></dd>
-        <dd>To display the custom font, send text with</dd>
-        <dd><b>String.fromCharCode(0);</b></dd>
+        <dd>Default is column 0.</dd>
         <dt>clear (optional)<span class="property-type">any</span></dt>
         <dd>Clears all lines.</dd>
         <dt>led (optional)<span class="property-type">boolean</span></dt>
@@ -132,15 +92,10 @@
     </dl>
     <h3><b>Usage:</b></h3>
     <p>
-        pcf8574 is used for control lcd hd44780.<br>
+        This node writes big font on LCD.<br>
+        pcf8574 is used for control lcd hd44780.<br>      
         <b>Line-Number</b> selects line to display.<br>
-        If <b>Rigth-Align</b> is checked,<br>
-        text is aligned to rigth side.<br>
-        Line is filled with <b>Fill</b> character.<br>
         Free write with <b>column</b> properties.<br>
-        If <b>Bargraph</b> is checked, as Bargraph<br>
-        is displayed on lcd line.<br>
-        Input payload number must between 0..100.<br>
         This node works on Raspberry Pi<br>
         with 32bit or 64bit OS.<br>
         Enable i2c with raspi-config.<br>
